--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -25,6 +25,8 @@ repositories {
 }
 
 dependencies {
+    implementation 'com.google.firebase:firebase-core:18.0.2'
+    implementation "com.google.firebase:firebase-bom:26.5.0"
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "androidx.appcompat:appcompat:$androidxAppCompatVersion"
     implementation project(':capacitor-android')
@@ -35,12 +37,4 @@ dependencies {
 }
 
 apply from: 'capacitor.build.gradle'
-
-try {
-    def servicesJSON = file('google-services.json')
-    if (servicesJSON.text) {
-        apply plugin: 'com.google.gms.google-services'
-    }
-} catch(Exception e) {
-    logger.warn("google-services.json not found, google-services plugin not applied. Push Notifications won't work")
-}
+apply plugin: 'com.google.gms.google-services'
