--- a/android/app/capacitor.build.gradle
+++ b/android/app/capacitor.build.gradle
@@ -10,8 +10,8 @@ android {
 apply from: "../capacitor-cordova-android-plugins/cordova.variables.gradle"
 dependencies {
     implementation project(':capacitor-community-fcm')
+    implementation project(':capacitor-community-stripe')
     implementation project(':capacitor-admob')
-    implementation "com.android.billingclient:billing:3.0.0"
     implementation "com.google.android.gms:play-services-base:11.0.4"
     implementation "com.google.android.gms:play-services-ads:11.0.4"
     implementation "com.android.billingclient:billing:3.0.0"
