--- a/android/capacitor.settings.gradle
+++ b/android/capacitor.settings.gradle
@@ -5,5 +5,8 @@ project(':capacitor-android').projectDir = new File('../node_modules/@capacitor/
 include ':capacitor-community-fcm'
 project(':capacitor-community-fcm').projectDir = new File('../node_modules/@capacitor-community/fcm/android')
 
+include ':capacitor-community-stripe'
+project(':capacitor-community-stripe').projectDir = new File('../node_modules/@capacitor-community/stripe/android')
+
 include ':capacitor-admob'
 project(':capacitor-admob').projectDir = new File('../node_modules/capacitor-admob/android')
