--- a/package.json
+++ b/package.json
@@ -11,26 +11,28 @@
   },
   "dependencies": {
     "@capacitor-community/fcm": "^1.1.0",
-    "@capacitor/android": "^2.4.6",
+    "@capacitor-community/stripe": "^3.0.3",
+    "@capacitor/android": "^2.4.7",
     "@capacitor/core": "2.4.6",
     "@ionic-native/admob-free": "^5.31.1",
     "@ionic-native/core": "^5.31.1",
     "@ionic-native/in-app-purchase-2": "^5.31.1",
     "@ionic/pwa-elements": "^3.0.2",
-    "@ionic/vue": "^5.4.0",
-    "@ionic/vue-router": "^5.4.0",
+    "@ionic/vue": "^5.6.3",
+    "@ionic/vue-router": "^5.6.3",
+    "@stripe-elements/stripe-elements": "0.0.3",
     "axios": "^0.21.1",
     "capacitor-admob": "^0.1.0",
-    "cc.fovea.cordova.purchase": "^10.5.3",
     "cordova-admob-sdk": "^0.24.1",
     "cordova-plugin-purchase": "^10.5.3",
     "cordova-promise-polyfill": "0.0.2",
-    "core-js": "^3.6.5",
+    "core-js": "^3.9.1",
+    "jetifier": "^1.6.6",
     "moment": "^2.29.1",
-    "vue": "^3.0.0-0",
+    "vue": "^3.0.9",
     "vue-axios": "^3.2.4",
     "vue-i18n": "^9.0.0",
-    "vue-router": "^4.0.0-0",
+    "vue-router": "^4.0.5",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
@@ -39,19 +41,19 @@
     "@types/jest": "^24.0.19",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-e2e-cypress": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-typescript": "~4.5.0",
-    "@vue/cli-plugin-unit-jest": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0-0",
+    "@vue/cli-plugin-babel": "^4.5.12",
+    "@vue/cli-plugin-e2e-cypress": "^4.5.12",
+    "@vue/cli-plugin-eslint": "^4.5.12",
+    "@vue/cli-plugin-router": "^4.5.12",
+    "@vue/cli-plugin-typescript": "^4.5.12",
+    "@vue/cli-plugin-unit-jest": "^4.5.12",
+    "@vue/cli-service": "^4.5.12",
+    "@vue/compiler-sfc": "^3.0.9",
     "@vue/eslint-config-typescript": "^5.0.2",
-    "@vue/test-utils": "^2.0.0-0",
+    "@vue/test-utils": "^2.0.0-rc.4",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0-0",
-    "typescript": "~3.9.3",
+    "eslint-plugin-vue": "^7.8.0",
+    "typescript": "^3.9.9",
     "vue-jest": "^5.0.0-0"
   },
   "description": "An Ionic project"
