--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,23 +1,3 @@
 {
-  "appId": "ru.laravelka.socfollowers",
-  "appName": "SocFollowers",
-  "bundledWebRuntime": false,
-  "npmClient": "npm",
-  "webDir": "dist",
-  "plugins": {
-    "SplashScreen": {
-      "launchShowDuration": 4000,
-      "launchAutoHide": true,
-      "backgroundColor": "#ffffffff",
-      "androidSplashResourceName": "splash",
-      "androidScaleType": "CENTER_CROP",
-      "androidSpinnerStyle": "large",
-      "iosSpinnerStyle": "small",
-      "spinnerColor": "#999999",
-      "showSpinner": true,
-      "splashFullScreen": true,
-      "splashImmersive": true
-    }
-  },
-  "cordova": {}
+    "webDir": "dist"
 }
