--- a/package.json
+++ b/package.json
@@ -10,30 +10,37 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@capacitor-community/fcm": "^1.1.0",
+    "@capacitor-community/admob": "^3.2.0",
+    "@capacitor-community/fcm": "^1.1.2",
     "@capacitor-community/stripe": "^3.0.3",
-    "@capacitor/android": "^2.4.7",
-    "@capacitor/core": "2.4.6",
-    "@ionic-native/admob-free": "^5.31.1",
-    "@ionic-native/core": "^5.31.1",
-    "@ionic-native/in-app-purchase-2": "^5.31.1",
+    "@capacitor/android": "^3.1.2",
+    "@capacitor/core": "^3.1.2",
+    "@capacitor/device": "^1.0.2",
+    "@capacitor/geolocation": "^1.0.2",
+    "@capacitor/local-notifications": "^1.0.3",
+    "@capacitor/push-notifications": "^1.0.3",
+    "@ionic-native/admob-free": "^5.34.0",
+    "@ionic-native/core": "^5.34.0",
+    "@ionic-native/in-app-purchase-2": "^5.34.0",
     "@ionic/pwa-elements": "^3.0.2",
-    "@ionic/vue": "^5.6.3",
-    "@ionic/vue-router": "^5.6.3",
+    "@ionic/vue": "^5.6.12",
+    "@ionic/vue-router": "^5.6.12",
     "@stripe-elements/stripe-elements": "0.0.3",
+    "@vue-stripe/vue-stripe": "^4.2.5",
     "axios": "^0.21.1",
     "capacitor-admob": "^0.1.0",
     "cordova-admob-sdk": "^0.24.1",
-    "cordova-plugin-purchase": "^10.5.3",
+    "cordova-plugin-purchase": "^10.6.1",
     "cordova-promise-polyfill": "0.0.2",
-    "core-js": "^3.9.1",
-    "jetifier": "^1.6.6",
+    "core-js": "^3.16.0",
+    "jetifier": "^1.6.8",
+    "logrocket": "^2.0.0",
     "moment": "^2.29.1",
-    "vue": "^3.0.9",
-    "vue-axios": "^3.2.4",
-    "vue-i18n": "^9.0.0",
-    "vue-router": "^4.0.5",
-    "vuex": "^4.0.0"
+    "vue": "^3.1.5",
+    "vue-axios": "^3.2.5",
+    "vue-i18n": "^9.1.7",
+    "vue-router": "^4.0.10",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@capacitor/cli": "2.4.6",
@@ -41,20 +48,20 @@
     "@types/jest": "^24.0.19",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
-    "@vue/cli-plugin-babel": "^4.5.12",
-    "@vue/cli-plugin-e2e-cypress": "^4.5.12",
-    "@vue/cli-plugin-eslint": "^4.5.12",
-    "@vue/cli-plugin-router": "^4.5.12",
-    "@vue/cli-plugin-typescript": "^4.5.12",
-    "@vue/cli-plugin-unit-jest": "^4.5.12",
-    "@vue/cli-service": "^4.5.12",
-    "@vue/compiler-sfc": "^3.0.9",
+    "@vue/cli-plugin-babel": "^4.5.13",
+    "@vue/cli-plugin-e2e-cypress": "^4.5.13",
+    "@vue/cli-plugin-eslint": "^4.5.13",
+    "@vue/cli-plugin-router": "^4.5.13",
+    "@vue/cli-plugin-typescript": "^4.5.13",
+    "@vue/cli-plugin-unit-jest": "^4.5.13",
+    "@vue/cli-service": "^4.5.13",
+    "@vue/compiler-sfc": "^3.1.5",
     "@vue/eslint-config-typescript": "^5.0.2",
-    "@vue/test-utils": "^2.0.0-rc.4",
+    "@vue/test-utils": "^2.0.0-rc.12",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.8.0",
-    "typescript": "^3.9.9",
-    "vue-jest": "^5.0.0-0"
+    "eslint-plugin-vue": "^7.15.0",
+    "typescript": "^3.9.10",
+    "vue-jest": "^5.0.0-alpha.10"
   },
   "description": "An Ionic project"
 }
